tests/build/widget_new/incorrect_arg_type2.stderr
error[E0308]: mismatched types
  --> $DIR/incorrect_arg_type2.rs:11:23
   |
11 |         simple_type = true
   |                       ^^^^ expected `u32`, found `bool`
